--- a/weather_new/pubspec.yaml
+++ b/weather_new/pubspec.yaml
@@ -41,6 +41,8 @@ dev_dependencies:
   flutter_svg: ^1.1.0
   http: ^0.13.5
   google_fonts: ^4.0.3
+  geolocator: 14.0.0
+  # permission_handler: ^10.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
