--- a/weather_new/pubspec.yaml
+++ b/weather_new/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
   http: ^0.13.5
   google_fonts: ^4.0.3
   geolocator: 14.0.0
+  geocoding: ^2.1.0
   # permission_handler: ^10.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
