The temperature for the current location has been updated in this version [ the icon is not yet responsive and todays temp is not being updates too ]

--- a/weather_new/pubspec.yaml
+++ b/weather_new/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
   assets:
     - C:\Users\saif\Desktop\WEATHER APP\weather---by-digitalLog\weather_new\assets\search_locations.svg
     - C:\Users\saif\Desktop\WEATHER APP\weather---by-digitalLog\weather_new\assets\location_on.svg
+    - C:\Users\saif\Desktop\WEATHER APP\weather---by-digitalLog\weather_new\assets\weather-sun.svg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
