--- a/weather_new/pubspec.yaml
+++ b/weather_new/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  http: ^0.13.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -39,7 +39,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_svg: ^1.1.0
-  http: ^0.13.5
+  
   google_fonts: ^4.0.3
   geolocator: 14.0.0
   geocoding: ^2.1.0
@@ -97,9 +97,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
+    # the path and the weight specifications for the jura font
     - family: Jura
       fonts:
-      # add the path here 
         - asset: assets/fonts/jura/Jura-Light.ttf
           weight: 300
         - asset: assets/fonts/jura/Jura-Regular.ttf
@@ -110,6 +110,11 @@ flutter:
           weight: 600
         - asset: assets/fonts/jura/Jura-Bold.ttf
           weight: 700
+
+    - family: Michroma
+      fonts:
+        - asset: assets/fonts/michroma/Michroma-Regular.ttf
+          weight: 400
     # - family: Trajan Pro
     #   fonts:
     #     - asset: fonts/TrajanPro.ttf
