PATCH - The error with users not able to search more than one location at a time has been resolved , the default image for the weather when the app opens and loads has been changed

--- a/weather_new/pubspec.yaml
+++ b/weather_new/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
     - assets/weatherLogo/801.svg
     - assets/weatherLogo/802.svg
     - assets/weatherLogo/803-804.svg
+    - assets/weatherLogo/smiley-default.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
