UPDATE - The user searched location will now be dispayed along with the temperature of that location

--- a/weather_new/pubspec.yaml
+++ b/weather_new/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     # images for the app logos 
     - assets/appLogo/location_on.svg
     - assets/appLogo/search_locations.svg
+    - assets/appLogo/sun_uvIndex.svg
 
     # images for the weather forcast
     - assets/weatherLogo/200-232.svg
