--- a/weather_new/pubspec.yaml
+++ b/weather_new/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_svg: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_svg: ^1.1.0
+  # flutter_svg: ^1.1.0
   
   google_fonts: ^4.0.3
   geolocator: 14.0.0
@@ -69,6 +70,12 @@ flutter:
     - assets/appLogo/location_on.svg
     - assets/appLogo/search_locations.svg
     - assets/appLogo/sun_uvIndex.svg
+    - assets/appLogo/temperature_feelsLike.svg
+    - assets/appLogo/drop_humidity.svg
+    - assets/appLogo/wind-speed.svg
+    - assets/appLogo/wind_direction.svg
+    - assets/appLogo/visibility_eye.svg
+    - assets/appLogo/humidity_drop.svg
 
     # images for the weather forcast
     - assets/weatherLogo/200-232.svg
