UPDATE - The more details about weather has been updated with realtime data of the current location , it will not change based on the user search as of now

--- a/weather_new/pubspec.yaml
+++ b/weather_new/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - assets/appLogo/wind_direction.svg
     - assets/appLogo/visibility_eye.svg
     - assets/appLogo/humidity_drop.svg
+    - assets/appLogo/pressure_icon.svg
 
     # images for the weather forcast
     - assets/weatherLogo/200-232.svg
