--- a/weather_new/pubspec.yaml
+++ b/weather_new/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_svg: ^1.1.0
+  flutter_native_splash: ^2.4.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   # flutter_svg: ^1.1.0
   
+  # flutter_native_splash: ^2.4.0 
   google_fonts: ^4.0.3
   geolocator: 14.0.0
   geocoding: ^2.1.0
@@ -52,9 +54,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+
+
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -77,6 +83,8 @@ flutter:
     - assets/appLogo/visibility_eye.svg
     - assets/appLogo/humidity_drop.svg
     - assets/appLogo/pressure_icon.svg
+    - assets/appLogo/loading_page.png 
+    - assets/appLogo/footer_logo.png
 
     # images for the weather forcast
     - assets/weatherLogo/200-232.svg
