UPDATE - App logo long with the app name has been updated , Few minute bugs within the search and a pop up notification has beeen added into the app using snackBar

--- a/weather_new/android/app/src/main/AndroidManifest.xml
+++ b/weather_new/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
 
     <application
-        android:label="weather_new"
+        android:label="AeroCast"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
